--- a/app/search/index.html
+++ b/app/search/index.html
@@ -2,3 +2,6 @@
     <input type="search" name="search" ng-model="term">
     <button>Search</button>
 </form>
+<div>
+    <pre>{{ searchResults | json}}</pre>
+</div>
